# game-of-life

./: .travis.yml  Cargo.toml  README.md
benches/: lib.rs  parsers.rs
examples/: 3enginecordershipgun_106.lif
examples/Life 1.05/: B-52_Bomber.life  Gosper_Glider_Gun.lif
examples/Plaintext/: glider_plaintext.cells  gosperglidergun_plaintext.cells  lidka.cells
examples/RLE/: Glider.rle
src/: cli.rs  config.rs  graphics_context.rs  lib.rs  main.rs  render.rs  view.rs  window.rs
src/lib/: life_106.rs  mod.rs  rule.rs
src/lib/file/: cells.rs  life105.rs  life106.rs  mod.rs  plaintext.rs  rle.rs
src/lib/parsers/: life_105.rs  life_106.rs  mod.rs  plaintext.rs  rle.rs  run_length_encoded.rs
src/shaders/: cell.fs
src/window/: graphics_context.rs  mod.rs  render.rs  view.rs
src/window/shaders/: cell.vs
tests/: life105.rs  life106.rs  life_105.rs  life_106.rs  list_table.rs  plaintext.rs  rle.rs  rule.rs
