[package]
authors = ["Splinter Suidman (splintah)", "Sybrand Aarnoutse (syberant)"]
name = "game-of-life"
version = "1.0.0"

[lib]
name = "game_of_life"
path = "./src/lib/mod.rs"

[features]
# This feature is only used for benchmarks since the test crate is unstable.
bench = []

[dependencies]
rand = "~0.5"
rayon = "~1.0"
clap = "~2.31"
glutin = "~0.17"
gl = "0.6.0"
rgl = "0.2.0"
cgmath = "~0.16"
